--- a/public/assets/css/yougether.css
+++ b/public/assets/css/yougether.css
@@ -1,7 +1,7 @@
 /* beta version designed for min 995x600px */
 
 body {
-  background-color: #222;
+  background-color: #7E8F7C;
 }
 
 .container-fluid {
