--- a/server/views/room.hbs
+++ b/server/views/room.hbs
@@ -14,14 +14,11 @@
 
   <body>
 
-<div id="slim-header"></div>
-<div id = "header"><h5><b>yougether.io</b></h5></div>
-
 <div id="theater-background"> 
 <div class = "row nopadding">
 
  <!--player column-->
- <div class = "col-md-8 nopadding"> 
+ <div class = "col-md-10 nopadding"> 
   <div class="embed-responsive embed-responsive-16by9">
     <center> <div id="player"></div></center>
   </div>
@@ -29,17 +26,13 @@
  <!--end player column-->
 
  <!--chat column-->
- <div class = 'col-md-4 nopadding'  id='chat'>
-  <div id ="chat-online">
-  <b>welcome to {{roomID}}</b><br><br>
-  <b>online now</b><br>
-    {{userName}} (you)
-  </div>
-
-  <div id = "chat-text"></div>
-  <input class="fixed" type="text"  id="chat_msg" placeholder="Press enter"> 
- </div>
+ <div class = "col-md-2 nopadding"> 
+    funcking chat!!!
+ </div>  
  <!--end chat column-->
+
+
+
 
 </div> <!-- row -->
 </div> <!-- theater -->
